# Singlish-agent

./: .env.example  .gitignore  README.md  conda-lock-win-64.txt  environment.yml  package-lock.json  package.json  project-plan.md  requirements-lock.txt  requirements.txt  记录.md
apps/api/: pyproject.toml
apps/api/src/singlish_agent_api/: main.py
apps/api/src/singlish_agent_api/api/routes/: health.py  jobs.py
apps/api/src/singlish_agent_api/core/: config.py  logging.py
apps/api/src/singlish_agent_api/domain/jobs/: exports.py  models.py  schemas.py  service.py
apps/api/src/singlish_agent_api/infrastructure/asr/: __init__.py  provider.py
apps/api/src/singlish_agent_api/infrastructure/audio/: __init__.py  preprocess.py  vad.py
apps/api/src/singlish_agent_api/infrastructure/cache/: __init__.py  redis.py
apps/api/src/singlish_agent_api/infrastructure/db/: session.py
apps/api/src/singlish_agent_api/infrastructure/normalization/: provider.py
apps/api/src/singlish_agent_api/infrastructure/repositories/: jobs.py
apps/api/src/singlish_agent_api/infrastructure/storage/: __init__.py  client.py
apps/api/src/singlish_agent_api/scripts/: generate_eval_manifest.py
apps/api/src/singlish_agent_api/worker/: __init__.py  celery_app.py  run_worker.py  runtime.py  tasks.py
apps/api/tests/integration/: test_health.py  test_health_dependencies.py  test_jobs_api.py  test_worker_task.py
apps/api/tests/unit/: test_generate_eval_manifest.py  test_job_exports.py  test_job_status.py  test_normalization_provider.py  test_vad.py  test_worker_runtime.py
data/: README.md
(+37 files in other folders)
